# DecompIL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
DotnetBinaryInterface/: Decompilation.cs  DotnetBinaryInterface.csproj  GlobalUsings.cs  MetadataReaderExt.cs  Utils.cs
DotnetBinaryInterface/AssemblyTypes/: AssemblyCoffHeader.cs  AssemblyCommonAttributes.cs  AssemblyCorHeader.cs  AssemblyInfo.cs  AssemblyMetadata.cs  AssemblyPEHeader.cs  AssemblyPEHeaders.cs  AssemblySectionHeader.cs  AssemblyTypeMetadata.cs
DotnetBinaryInterface/MarshalTypes/: DecompilationInfo.cs  MarshalException.cs  MarshalExpected.cs  MarshalList.cs  MarshalNullable.cs  MarshalString.cs
cmake/: DotnetPublish.cmake
program_info/: decompil.desktop
src/: decompilapplication.cpp  decompilapplication.h  interface.cpp  interface.h  languagemapping.h  libraryhandle.cpp  libraryhandle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  richtextitemdelegate.cpp  richtextitemdelegate.h  settingsform.cpp  settingsform.h  settingsform.ui  settingsstore.cpp  settingsstore.h  uiutils.cpp  uiutils.h
src/interface/: interface.cpp  interface.h  libraryhandle.cpp  libraryhandle.h
src/interface/types/marshal/: decompilationinfo.h  marshalexception.h  marshallist.h  marshalnullable.h  marshalstring.h
src/interface/types/marshal/assemblytypes/: assemblycoffheader.h  assemblycommonattributes.h  assemblycorheader.h  assemblyinfo.h  assemblymetadata.h  assemblypeheader.h  assemblypeheaders.h  assemblysectionheader.h  assemblytypemetadata.h  shared.h
src/interface/types/native/: assemblycommonattributes.h  assemblyinfo.h  assemblymetadata.h  assemblypeheaders.h  assemblysectionheader.h  assemblytypemetadata.h
src/interface_types/marshal/: decompilationinfo.h  marshalexpected.h  marshallist.h  marshalnullable.h  marshalstring.h
src/interface_types/marshal/assemblytypes/: assemblycommonattributes.h  assemblypeheaders.h  assemblysectionheader.h  assemblytypemetadata.h  shared.h
src/interface_types/native/: assemblycommonattributes.h  assemblyinfo.h  assemblymetadata.h  assemblypeheaders.h  assemblysectionheader.h  assemblytypemetadata.h
src/ui/: richtextitemdelegate.cpp  richtextitemdelegate.h  settingsform.cpp  settingsform.h  settingsform.ui
src/ui/widgets/: assemblyitemmenu.cpp  assemblyitemmenu.h  assemblytreeitem.cpp  assemblytreeitem.h  assemblytreewidget.cpp  assemblytreewidget.h  findbar.cpp  findbar.h  findbar.ui  typetreeitem.cpp  typetreeitem.h
src/ui/widgets/codeeditor/: codeeditor.cpp  codeeditor.h  codeeditordefinitions.cpp  codeeditordefinitions.h  codeeditorsidebar.cpp  codeeditorsidebar.h
src/utils/: stringutils.cpp  stringutils.h  uiutils.h
src/widgets/: assemblytreeitem.cpp  assemblytreeitem.h  codeeditor.cpp  codeeditor.h  findbar.cpp  typetreeitem.cpp  typetreeitem.h
src/widgets/codeeditor/: codeeditor.cpp  codeeditor.h  codeeditordefinitions.cpp  codeeditordefinitions.h
